fixed spacing on game metadata. finished game-template style. resolves #69

--- a/src/styles/game-template.module.css
+++ b/src/styles/game-template.module.css
@@ -8,6 +8,10 @@
     order: 1;
 }
 
+.contentLayout .metadata > * {
+    margin-right: 2em;
+}
+
 .contentLayout aside {
     order: 2;
 }
